--- a/OptibriumTest/OptibriumTest1.fmx
+++ b/OptibriumTest/OptibriumTest1.fmx
@@ -8,7 +8,7 @@ object TestForm: TTestForm
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
-  object StringGrid1: TStringGrid
+  object DataGrid1: TStringGrid
     CanFocus = True
     ClipChildren = True
     Position.X = 32.000000000000000000
@@ -69,10 +69,29 @@ object TestForm: TTestForm
     TabOrder = 4
   end
   object Button1: TButton
-    Position.X = 600.000000000000000000
+    Position.X = 328.000000000000000000
     Position.Y = 48.000000000000000000
-    TabOrder = 6
-    Text = 'Button1'
+    TabOrder = 7
+    Text = 'ToMemory'
     OnClick = Button1Click
+  end
+  object OutputGrid: TStringGrid
+    CanFocus = True
+    ClipChildren = True
+    Position.X = 736.000000000000000000
+    Position.Y = 200.000000000000000000
+    Size.Width = 345.000000000000000000
+    Size.Height = 321.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 8
+    Viewport.Width = 341.000000000000000000
+    Viewport.Height = 296.000000000000000000
+  end
+  object Button2: TButton
+    Position.X = 584.000000000000000000
+    Position.Y = 328.000000000000000000
+    TabOrder = 6
+    Text = 'To Output'
+    OnClick = Button2Click
   end
 end
