--- a/OptibriumTest/OptibriumTest1.fmx
+++ b/OptibriumTest/OptibriumTest1.fmx
@@ -20,7 +20,7 @@ object TestForm: TTestForm
     Viewport.Width = 245.000000000000000000
     Viewport.Height = 128.000000000000000000
   end
-  object StringGrid2: TStringGrid
+  object DataGrid2: TStringGrid
     CanFocus = True
     ClipChildren = True
     Position.X = 32.000000000000000000
@@ -68,13 +68,6 @@ object TestForm: TTestForm
     Text = 'Label1'
     TabOrder = 4
   end
-  object Button1: TButton
-    Position.X = 328.000000000000000000
-    Position.Y = 48.000000000000000000
-    TabOrder = 7
-    Text = 'ToMemory'
-    OnClick = Button1Click
-  end
   object OutputGrid: TStringGrid
     CanFocus = True
     ClipChildren = True
@@ -83,15 +76,22 @@ object TestForm: TTestForm
     Size.Width = 345.000000000000000000
     Size.Height = 321.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 8
+    TabOrder = 7
     Viewport.Width = 341.000000000000000000
     Viewport.Height = 296.000000000000000000
   end
-  object Button2: TButton
-    Position.X = 584.000000000000000000
-    Position.Y = 328.000000000000000000
+  object OutputGrid1Button: TButton
+    Position.X = 592.000000000000000000
+    Position.Y = 48.000000000000000000
     TabOrder = 6
     Text = 'To Output'
-    OnClick = Button2Click
+    OnClick = OutputGrid1ButtonClick
+  end
+  object Output1Plus2Button: TButton
+    Position.X = 592.000000000000000000
+    Position.Y = 112.000000000000000000
+    TabOrder = 8
+    Text = 'Output1Plus2Button'
+    OnClick = Output1Plus2ButtonClick
   end
 end
