--- a/OptibriumTest/OptibriumTest1.fmx
+++ b/OptibriumTest/OptibriumTest1.fmx
@@ -2,7 +2,7 @@ object TestForm: TTestForm
   Left = 0
   Top = 0
   Caption = 'Optibrium Test - Samantha Strauss'
-  ClientHeight = 799
+  ClientHeight = 430
   ClientWidth = 1114
   FormFactor.Width = 320
   FormFactor.Height = 480
@@ -16,7 +16,7 @@ object TestForm: TTestForm
     Size.Width = 249.000000000000000000
     Size.Height = 153.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 3
+    TabOrder = 1
     Viewport.Width = 245.000000000000000000
     Viewport.Height = 128.000000000000000000
   end
@@ -28,30 +28,6 @@ object TestForm: TTestForm
     Size.Width = 249.000000000000000000
     Size.Height = 153.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 2
-    Viewport.Width = 245.000000000000000000
-    Viewport.Height = 128.000000000000000000
-  end
-  object StringGrid3: TStringGrid
-    CanFocus = True
-    ClipChildren = True
-    Position.X = 32.000000000000000000
-    Position.Y = 424.000000000000000000
-    Size.Width = 249.000000000000000000
-    Size.Height = 153.000000000000000000
-    Size.PlatformDefault = False
-    TabOrder = 1
-    Viewport.Width = 245.000000000000000000
-    Viewport.Height = 128.000000000000000000
-  end
-  object StringGrid4: TStringGrid
-    CanFocus = True
-    ClipChildren = True
-    Position.X = 32.000000000000000000
-    Position.Y = 616.000000000000000000
-    Size.Width = 249.000000000000000000
-    Size.Height = 153.000000000000000000
-    Size.PlatformDefault = False
     TabOrder = 0
     Viewport.Width = 245.000000000000000000
     Viewport.Height = 128.000000000000000000
@@ -60,13 +36,13 @@ object TestForm: TTestForm
     Position.X = 32.000000000000000000
     Position.Y = 8.000000000000000000
     Text = 'Label1'
-    TabOrder = 5
+    TabOrder = 3
   end
   object Label2: TLabel
     Position.X = 32.000000000000000000
     Position.Y = 200.000000000000000000
     Text = 'Label1'
-    TabOrder = 4
+    TabOrder = 2
   end
   object OutputGrid: TStringGrid
     CanFocus = True
@@ -76,22 +52,43 @@ object TestForm: TTestForm
     Size.Width = 345.000000000000000000
     Size.Height = 321.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 7
+    TabOrder = 5
     Viewport.Width = 341.000000000000000000
     Viewport.Height = 296.000000000000000000
   end
   object OutputGrid1Button: TButton
     Position.X = 592.000000000000000000
     Position.Y = 48.000000000000000000
-    TabOrder = 6
+    TabOrder = 4
     Text = 'To Output'
     OnClick = OutputGrid1ButtonClick
   end
   object Output1Plus2Button: TButton
     Position.X = 592.000000000000000000
     Position.Y = 112.000000000000000000
-    TabOrder = 8
+    TabOrder = 6
     Text = 'Output1Plus2Button'
     OnClick = Output1Plus2ButtonClick
+  end
+  object SetUnionButton: TButton
+    Position.X = 592.000000000000000000
+    Position.Y = 176.000000000000000000
+    TabOrder = 7
+    Text = 'SetUnionButton'
+    OnClick = SetUnionButtonClick
+  end
+  object SetDifferencesButton: TButton
+    Position.X = 592.000000000000000000
+    Position.Y = 240.000000000000000000
+    TabOrder = 8
+    Text = 'SetDifferencesButton'
+    OnClick = SetDifferencesButtonClick
+  end
+  object IntersectionButton: TButton
+    Position.X = 592.000000000000000000
+    Position.Y = 312.000000000000000000
+    TabOrder = 9
+    Text = 'IntersectionButton'
+    OnClick = IntersectionButtonClick
   end
 end
