--- a/OptibriumTest/OptibriumTest1.fmx
+++ b/OptibriumTest/OptibriumTest1.fmx
@@ -2,8 +2,8 @@ object TestForm: TTestForm
   Left = 0
   Top = 0
   Caption = 'Optibrium Test - Samantha Strauss'
-  ClientHeight = 613
-  ClientWidth = 1114
+  ClientHeight = 392
+  ClientWidth = 959
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
@@ -11,103 +11,108 @@ object TestForm: TTestForm
   object DataGrid1: TStringGrid
     CanFocus = True
     ClipChildren = True
-    Position.X = 32.000000000000000000
+    Position.X = 24.000000000000000000
     Position.Y = 32.000000000000000000
-    Size.Width = 249.000000000000000000
+    Size.Width = 345.000000000000000000
     Size.Height = 153.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
-    Viewport.Width = 245.000000000000000000
+    Viewport.Width = 341.000000000000000000
     Viewport.Height = 128.000000000000000000
   end
   object DataGrid2: TStringGrid
     CanFocus = True
     ClipChildren = True
-    Position.X = 32.000000000000000000
+    Position.X = 24.000000000000000000
     Position.Y = 224.000000000000000000
-    Size.Width = 249.000000000000000000
+    Size.Width = 345.000000000000000000
     Size.Height = 153.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
-    Viewport.Width = 245.000000000000000000
+    Viewport.Width = 341.000000000000000000
     Viewport.Height = 128.000000000000000000
   end
-  object Label1: TLabel
-    Position.X = 32.000000000000000000
+  object Grid1Label: TLabel
+    Position.X = 24.000000000000000000
     Position.Y = 8.000000000000000000
-    Text = 'Label1'
-    TabOrder = 3
+    Text = 'Grid 1'
+    TabOrder = 4
   end
-  object Label2: TLabel
-    Position.X = 32.000000000000000000
+  object Grid2Label: TLabel
+    Position.X = 24.000000000000000000
     Position.Y = 200.000000000000000000
-    Text = 'Label1'
+    Text = 'Grid 2'
     TabOrder = 2
   end
   object OutputGrid: TStringGrid
     CanFocus = True
     ClipChildren = True
-    Position.X = 736.000000000000000000
+    Position.X = 592.000000000000000000
     Position.Y = 32.000000000000000000
     Size.Width = 345.000000000000000000
-    Size.Height = 321.000000000000000000
+    Size.Height = 345.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 5
+    TabOrder = 6
     Viewport.Width = 341.000000000000000000
-    Viewport.Height = 296.000000000000000000
+    Viewport.Height = 320.000000000000000000
   end
   object OutputGrid1Button: TButton
-    Position.X = 592.000000000000000000
-    Position.Y = 48.000000000000000000
-    TabOrder = 4
-    Text = 'To Output'
+    Position.X = 392.000000000000000000
+    Position.Y = 32.000000000000000000
+    Size.Width = 176.000000000000000000
+    Size.Height = 22.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 5
+    Text = 'Grid 1 To Output Grid'
     OnClick = OutputGrid1ButtonClick
   end
   object Output1Plus2Button: TButton
-    Position.X = 592.000000000000000000
-    Position.Y = 112.000000000000000000
-    TabOrder = 6
-    Text = 'Output1Plus2Button'
+    Position.X = 392.000000000000000000
+    Position.Y = 80.000000000000000000
+    Size.Width = 177.000000000000000000
+    Size.Height = 22.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 7
+    Text = 'Grid 1 + Grid 2 to Output'
     OnClick = Output1Plus2ButtonClick
   end
   object SetUnionButton: TButton
-    Position.X = 592.000000000000000000
-    Position.Y = 176.000000000000000000
-    TabOrder = 7
-    Text = 'SetUnionButton'
+    Position.X = 392.000000000000000000
+    Position.Y = 128.000000000000000000
+    Size.Width = 177.000000000000000000
+    Size.Height = 41.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 8
+    Text = 'Union of Grid 1 and Grid 2 to Output Grid'
+    TextSettings.WordWrap = True
     OnClick = SetUnionButtonClick
   end
   object SetDifferencesButton: TButton
-    Position.X = 592.000000000000000000
-    Position.Y = 240.000000000000000000
-    TabOrder = 8
-    Text = 'SetDifferencesButton'
+    Position.X = 392.000000000000000000
+    Position.Y = 200.000000000000000000
+    Size.Width = 177.000000000000000000
+    Size.Height = 41.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 9
+    Text = 'Difference of Grid 1 and Grid 2 to Output Grid'
+    TextSettings.WordWrap = True
     OnClick = SetDifferencesButtonClick
   end
   object IntersectionButton: TButton
-    Position.X = 592.000000000000000000
-    Position.Y = 312.000000000000000000
-    TabOrder = 9
-    Text = 'IntersectionButton'
+    Position.X = 392.000000000000000000
+    Position.Y = 272.000000000000000000
+    Size.Width = 177.000000000000000000
+    Size.Height = 41.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 10
+    Text = 'Intersection of Grid 1 and Grid 2 to Output Grid'
+    TextSettings.WordWrap = True
     OnClick = IntersectionButtonClick
   end
-  object Button1: TButton
-    Position.X = 392.000000000000000000
-    Position.Y = 240.000000000000000000
-    TabOrder = 10
-    Text = 'Button1'
-    OnClick = Button1Click
-  end
-  object Memo1: TMemo
-    Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
-    DataDetectorTypes = []
-    Position.X = 320.000000000000000000
-    Position.Y = 352.000000000000000000
-    Size.Width = 401.000000000000000000
-    Size.Height = 257.000000000000000000
-    Size.PlatformDefault = False
-    TabOrder = 12
-    Viewport.Width = 397.000000000000000000
-    Viewport.Height = 253.000000000000000000
+  object OutputGrid1: TLabel
+    Position.X = 592.000000000000000000
+    Position.Y = 8.000000000000000000
+    Text = 'Output Grid'
+    TabOrder = 3
   end
 end
